Clean repository without large video file

--- a/header.html
+++ b/header.html
@@ -380,7 +380,9 @@ img {
                     </div>
                 <div class="logo-wrapper">
                    <div class="madc-logo-banner">
-    <img src="assets/img/logo/logoMADC.jpg" alt="MADC Logo">
+    <a href="index.html">
+        <img src="assets/img/logo/logoMADC.jpg" alt="MADC Logo">
+    </a>
 </div>
 
                   
