--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@ body.hero-active .buttons-container {
 <!-- Transition video overlay -->
 <div id="transitionVideoContainer">
   <video id="transitionVideo" playsinline muted>
-    <source src="assets/video/Video Project 1.mp4" type="video/mp4">
+    <source src="assets/video/Earth_4.mp4" type="video/mp4">
     <!-- Fallback if transition video doesn't exist -->
     <source src="assets/video/globe.mp4" type="video/mp4">
   </video>
