--- a/boarding-pass.html
+++ b/boarding-pass.html
@@ -403,7 +403,7 @@
                 <div class="header">
                     <div class="airline-logo">
                         <img src="assets/img/logo/madc-mob.png" alt="MADC Logo">
-                        <span class="airline-name">Maharashtra Airport<br>Development Company</span>
+                        <span class="airline-name">Maharashtra Airport<br>Development Company Ltd.</span>
                     </div>
                     <div class="boarding-pass-label">Web Check-in</div>
                 </div>
