Clean repository without large video file

--- a/enter-about.html
+++ b/enter-about.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -251,12 +252,12 @@ body::after{
 
 <section class="hero">
   <div class="panel" id="uiPanel">
-    <img src="assets/img/logo/madc-mob.png" class="logo" alt="MADC">
+    <a href="index.html"><img src="assets/img/logo/madc-mob.png" class="logo" alt="MADC"></a>
 
     <div class="menu">
       <a href="about-us.html">ABOUT MADC</a>
       <!-- <a href="mah-aviation.html">AVIATION INFRASTRUCTURE</a> -->
-      <!-- <a href="pro-madc.html">MADC AIRPORTS</a> -->
+      <a href="pro-madc.html">MADC AIRPORTS</a>
       <!-- <a href="brief-mihan.html">MIHAN</a> -->
       <a href="udan-rcs-mah.html">UDAN – RCS</a>
     </div>
