Clean repository without large video file

--- a/amravati.html
+++ b/amravati.html
@@ -301,9 +301,9 @@
                         <div class="carousel-item h-100" data-bs-interval="3000">
                             <img src="assets/img/amravati4.png" class="d-block w-100 hero-img" alt="Amravati Airport View 4">
                         </div>
-                        <div class="carousel-item h-100" data-bs-interval="3000">
+                        <!-- <div class="carousel-item h-100" data-bs-interval="3000">
                             <img src="assets/img/amravati5.png" class="d-block w-100 hero-img" alt="Amravati Airport View 5">
-                        </div>
+                        </div> -->
                         <div class="carousel-item h-100" data-bs-interval="3000">
                             <img src="assets/img/amravati6.png" class="d-block w-100 hero-img" alt="Amravati Airport View 6">
                         </div>
