--- a/gadchiroli.html
+++ b/gadchiroli.html
@@ -285,7 +285,7 @@
         <div class="left-panel">
             
             <div class="hero-image-wrapper">
-                <img src="assets/img/gadchiroli.jpeg" class="hero-img" alt="Gadchiroli Airport">
+                <img src="assets/img/nanded2.jpg" class="hero-img" alt="Gadchiroli Airport">
             </div>
 
             <div class="stats-grid">
@@ -362,12 +362,12 @@
                     <div class="feature-item">
                         <i class="fas fa-industry"></i> <span>Industrial & Steel Hub Growth</span>
                     </div>
-                    <div class="feature-item">
+                    <!-- <div class="feature-item">
                         <i class="fas fa-handshake"></i> <span>Lloyd Metals Anchor Investment</span>
                     </div>
                     <div class="feature-item">
                         <i class="fas fa-map"></i> <span>Land Acquisition in Progress</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
