--- a/yavatmal.html
+++ b/yavatmal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Sant Gadge Baba Yavatmal Airport | MADC</title>
+    <title>Yavatmal Airport | MADC</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -290,7 +290,7 @@
                 </div>
             </div>
 
-            <div class="stats-grid">
+            <!-- <div class="stats-grid">
                 <div class="stat-card">
                     <div class="stat-icon-circle bg-red-grad"><i class="fas fa-ruler-combined"></i></div>
                     <span class="stat-val">Expansion</span>
@@ -306,7 +306,7 @@
                     <span class="stat-val">24x7</span>
                     <span class="stat-label">Ops Planned</span>
                 </div>
-            </div>
+            </div> -->
 
             <div class="p-3 bg-white rounded-3 border d-flex align-items-center gap-3 mt-auto">
                 <div class="stat-icon-circle bg-red-grad m-0" style="width: 35px; height: 35px; font-size: 1rem;">
@@ -326,29 +326,29 @@
             </div>
 
             <div>
-                <h1 class="main-title">Sant Gadge Baba Yavatmal Airport</h1>
+                <h1 class="main-title">Yavatmal Airport</h1>
                 <p class="subtitle">"Emerging regional aviation gateway under MADC redevelopment"</p>
             </div>
 
             <div class="highlight-box">
                 <span class="info-label"><i class="fas fa-info-circle me-1"></i> Development Status</span>
                 <p style="font-size: 0.85rem; color: #555; line-height: 1.6; margin: 0;">
-                    MADC has assumed full operational control. Infrastructure upgrades, security works, and night landing facilities are currently in progress.
+                    MADC has assumed full operational control. Infrastructure upgrades, security works, and night landing facilities are currently in progress.Government resolution regarding handing over of Yavatmal Airport to MADC Ltd. released on 31st December 2025
                 </p>
             </div>
 
             <div class="mt-4">
                 <h5 style="font-weight: 700; font-size: 1rem; color: var(--madc-dark); margin-bottom: 10px;">About Yavatmal Airport</h5>
                 <p id="read-intro" style="font-size: 0.85rem; color: #555; line-height: 1.6; margin: 0;">
-                    Sant Gadge Baba Yavatmal Airport is currently undergoing a major transition under the MADC to strengthen regional air connectivity and infrastructure in the Vidarbha region.
+                     Yavatmal Airport is currently undergoing a major transition under the MADC to strengthen regional air connectivity and infrastructure in the Vidarbha region.
                 </p>
             </div>
 
             <div id="read-content" style="display:none;">
-                Welcome to Sant Gadge Baba Yavatmal Airport. In early January 2026, MADC formally took charge to accelerate development. Planned upgrades include runway expansion for ATR-72 aircraft and a new terminal building. Night landing facilities are being fast-tracked for 24/7 operations. Future links are planned for Mumbai, Pune, and Hyderabad.
+                Welcome to Yavatmal Airport. In early January 2026, MADC formally took charge to accelerate development.Government resolution regarding handing over of Yavatmal Airport to MADC Ltd. released on 31st December 2025. Planned upgrades include runway expansion for ATR-72 aircraft and a new terminal building. Night landing facilities are being fast-tracked for 24/7 operations. Future links are planned for Mumbai, Pune, and Hyderabad.
             </div>
 
-            <div class="mt-4">
+            <!-- <div class="mt-4">
                 <span class="info-label" style="color:#888; margin-bottom: 8px;">KEY FEATURES & DEVELOPMENT</span>
                 <div class="features-grid">
                     <div class="feature-item"><i class="fas fa-road"></i> <span>Runway Expansion</span></div>
@@ -356,7 +356,7 @@
                     <div class="feature-item"><i class="fas fa-moon"></i> <span>Night Landing (In Progress)</span></div>
                     <div class="feature-item"><i class="fas fa-shield-alt"></i> <span>Security Upgrades</span></div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="action-row">
                 <button id="voiceBtn" class="btn-premium btn-ai" onclick="toggleVoice()">
